--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body></body>
+    <link rel="stylesheet" href="./style.css" /></head
+  ><link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet"
+  />
+  <body style="margin: 0">
+    <!-- apple (mobile phone) -->
+
+    <div class="head">
+      <img src="/SVG.svg" alt="" />
+      <div class="head2">
+        <img src="/search.svg" alt="" />
+        <img src="/bag.svg" alt="" />
+        <img src="/main.svg" alt="" />
+      </div>
+    </div>
+    <div class="title">
+      We're donating $5 to the Global Fund for every purchase made with apple
+      pay at Apple. Through 12/8
+    </div>
+    <div class="picture"></div>
+  </body>
 </html>
