--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body style="margin: 0">
     <!-- apple (mobile phone) -->
 
-    <div class="head">
-      <img src="/SVG.svg" alt="" />
+    <div class="page1">
+      <img style="padding-left: 16px" src="/SVG.svg" alt="" />
       <div class="head2">
         <img src="/search.svg" alt="" />
         <img src="/bag.svg" alt="" />
@@ -26,6 +26,35 @@
       We're donating $5 to the Global Fund for every purchase made with apple
       pay at Apple. Through 12/8
     </div>
-    <div class="picture"></div>
+    <div class="picture">
+      <div class="name">IPhone 16 Pro</div>
+      <div class="name1">Hello Apple, Intelligence</div>
+      <div class="xxe">
+        <div class="name2">
+          <p>Learn more</p>
+        </div>
+        <div class="name3">
+          <p>Buy</p>
+        </div>
+      </div>
+    </div>
+    <div class="page2">
+      <div class="name">IPhone 16 Pro</div>
+      <div class="name1">Hello Apple, Intelligence</div>
+      <div class="xxe">
+        <div class="name4">
+          <p>Learn more</p>
+        </div>
+        <div class="name5">
+          <p>Buy</p>
+        </div>
+      </div>
+    </div>
+    <div class="page3">
+      <div class="name6">
+        <img src="/ipad word.png" alt="" width="180px" height="42px" />
+        <div class="font1">Two sizes. Faster chip. Doees it all.</div>
+      </div>
+    </div>
   </body>
 </html>
