--- a/index.html
+++ b/index.html
@@ -55,6 +55,55 @@
         <img src="/ipad word.png" alt="" width="180px" height="42px" />
         <div class="font1">Two sizes. Faster chip. Doees it all.</div>
       </div>
+      <div class="xxa">
+        <div class="name2">
+          <p>Learn more</p>
+        </div>
+        <div class="name3">
+          <p>Buy</p>
+        </div>
+      </div>
+      <div class="name7">Hello Apple, Intelligence</div>
+    </div>
+    <div class="page4">
+      <div class="xxi">
+        <div class="xxo">
+          <div class="name8">AirPods 4</div>
+          <div class="name9">
+            Iconic. Now supersonic. Available with Active Noise Cancellation.2
+          </div>
+        </div>
+        <div class="xxe">
+          <div class="name2">Learn more</div>
+          <div class="name3">Buy</div>
+        </div>
+      </div>
+    </div>
+    <div class="page5">
+      <div class="page5-1">
+        <div class="name11">
+          <img src="/Vector.svg" alt="" />
+          <div class="name10">WATCH</div>
+        </div>
+        <div class="name12">SERIES 10</div>
+        <div class="name13">Thinstant classic.</div>
+        <div class="xxe">
+          <div class="name2">Learn more</div>
+          <div class="name3">Buy</div>
+        </div>
+      </div>
+    </div>
+    <div class="page6">
+      <div style="gap: 16px">
+        <div style="gap: 4px">
+          <div class="name14">MacBook Air</div>
+          <div class="name15">Lean. Mean. M3 machine</div>
+        </div>
+        <div class="hhi">
+          <div class="name2">Learn more</div>
+          <div class="name3">Buy</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
