--- a/index.html
+++ b/index.html
@@ -105,5 +105,69 @@
         </div>
       </div>
     </div>
+    <div class="page7">
+      <div class="name19">
+        <div class="name17">Apple for Small Business</div>
+        <div class="name18">
+          Hardware, Software, and expert help - all in one place
+        </div>
+      </div>
+      <div class="name20">Learn more</div>
+    </div>
+    <div class="page8">
+      <div class="name21">Carrier deals at Apple</div>
+      <div class="name22">
+        Get up to $1000 in credit on a new iPhone. Trade-in may be required.
+      </div>
+      <div class="name23">Find your deal</div>
+    </div>
+    <div class="page9">
+      <div style="gap: 5px; padding-top: 51px">
+        <div class="name26">
+          <img src="/Vector.svg" alt="" />
+          <div class="name24">Trade In</div>
+        </div>
+        <div class="name25">
+          Get $180–$650 in credit when you trade in iPhone 12 or higher.4
+        </div>
+      </div>
+      <div class="name23">Get your estimate</div>
+    </div>
+    <div class="page10">
+      <div class="conteiner">
+        <div class="name27 scroll">
+          <img src="./source/picture1.jpg" alt="" />
+          <img src="/source/picture2.jpg" alt="" />
+          <img src="/source/picture3.jpg" alt="" />
+          <img src="/source/picture4.jpg" alt="" />
+          <img src="/source/picture5.jpg" alt="" />
+          <img src="/source/picture6.jpg" alt="" />
+          <img src="/source/picture7.jpg" alt="" />
+          <img src="/source/picture8.jpg" alt="" />
+        </div>
+      </div>
+      <div class="name28">
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+        <div class="scroll1"></div>
+      </div>
+    </div>
+    <div class="page11">
+      <div class="name29">
+        <div>
+          <img src="/lala.jpg" alt="" />
+          <div class="name30">La Oficial</div>
+        </div>
+        <div>
+          <img src="/Background.png" alt="" style="height: 114px" />
+          <div class="name30">Travel-Friendly Workouts</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
