--- a/index.html
+++ b/index.html
@@ -65,73 +65,79 @@
       </div>
       <div class="name7">Hello Apple, Intelligence</div>
     </div>
-    <div class="page4">
-      <div class="xxi">
-        <div class="xxo">
-          <div class="name8">AirPods 4</div>
-          <div class="name9">
-            Iconic. Now supersonic. Available with Active Noise Cancellation.2
+    <div class="tab1">
+      <div class="page4">
+        <div class="xxi">
+          <div class="xxo">
+            <div class="name8">AirPods 4</div>
+            <div class="name9">
+              Iconic. Now supersonic. Available with Active Noise Cancellation.2
+            </div>
+          </div>
+          <div class="xxe">
+            <div class="name2">Learn more</div>
+            <div class="name3">Buy</div>
           </div>
         </div>
-        <div class="xxe">
-          <div class="name2">Learn more</div>
-          <div class="name3">Buy</div>
+      </div>
+      <div class="page5">
+        <div class="page5-1">
+          <div class="name11">
+            <img src="/Vector.svg" alt="" />
+            <div class="name10">WATCH</div>
+          </div>
+          <div class="name12">SERIES 10</div>
+          <div class="name13">Thinstant classic.</div>
+          <div class="xxe">
+            <div class="name2">Learn more</div>
+            <div class="name3">Buy</div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="page5">
-      <div class="page5-1">
-        <div class="name11">
-          <img src="/Vector.svg" alt="" />
-          <div class="name10">WATCH</div>
+    <div class="tab2">
+      <div class="page6">
+        <div style="gap: 16px">
+          <div style="gap: 4px">
+            <div class="name14">MacBook Air</div>
+            <div class="name15">Lean. Mean. M3 machine</div>
+          </div>
+          <div class="hhi">
+            <div class="name2">Learn more</div>
+            <div class="name3">Buy</div>
+          </div>
         </div>
-        <div class="name12">SERIES 10</div>
-        <div class="name13">Thinstant classic.</div>
-        <div class="xxe">
-          <div class="name2">Learn more</div>
-          <div class="name3">Buy</div>
+      </div>
+      <div class="page7">
+        <div class="name19">
+          <div class="name17">Apple for Small Business</div>
+          <div class="name18">
+            Hardware, Software, and expert help - all in one place
+          </div>
         </div>
+        <div class="name20">Learn more</div>
       </div>
     </div>
-    <div class="page6">
-      <div style="gap: 16px">
-        <div style="gap: 4px">
-          <div class="name14">MacBook Air</div>
-          <div class="name15">Lean. Mean. M3 machine</div>
+    <div class="tab3">
+      <div class="page8">
+        <div class="name21">Carrier deals at Apple</div>
+        <div class="name22">
+          Get up to $1000 in credit on a new iPhone. Trade-in may be required.
         </div>
-        <div class="hhi">
-          <div class="name2">Learn more</div>
-          <div class="name3">Buy</div>
-        </div>
+        <div class="name23">Find your deal</div>
       </div>
-    </div>
-    <div class="page7">
-      <div class="name19">
-        <div class="name17">Apple for Small Business</div>
-        <div class="name18">
-          Hardware, Software, and expert help - all in one place
+      <div class="page9">
+        <div style="gap: 5px; padding-top: 51px">
+          <div class="name26">
+            <img src="/Vector.svg" alt="" />
+            <div class="name24">Trade In</div>
+          </div>
+          <div class="name25">
+            Get $180–$650 in credit when you trade in iPhone 12 or higher.4
+          </div>
         </div>
+        <div class="name23">Get your estimate</div>
       </div>
-      <div class="name20">Learn more</div>
-    </div>
-    <div class="page8">
-      <div class="name21">Carrier deals at Apple</div>
-      <div class="name22">
-        Get up to $1000 in credit on a new iPhone. Trade-in may be required.
-      </div>
-      <div class="name23">Find your deal</div>
-    </div>
-    <div class="page9">
-      <div style="gap: 5px; padding-top: 51px">
-        <div class="name26">
-          <img src="/Vector.svg" alt="" />
-          <div class="name24">Trade In</div>
-        </div>
-        <div class="name25">
-          Get $180–$650 in credit when you trade in iPhone 12 or higher.4
-        </div>
-      </div>
-      <div class="name23">Get your estimate</div>
     </div>
     <div class="page10">
       <div class="conteiner">
