--- a/index.html
+++ b/index.html
@@ -141,15 +141,25 @@
     </div>
     <div class="page10">
       <div class="conteiner">
-        <div class="name27 scroll">
-          <img src="./source/picture1.jpg" alt="" />
-          <img src="/source/picture2.jpg" alt="" />
-          <img src="/source/picture3.jpg" alt="" />
-          <img src="/source/picture4.jpg" alt="" />
-          <img src="/source/picture5.jpg" alt="" />
-          <img src="/source/picture6.jpg" alt="" />
-          <img src="/source/picture7.jpg" alt="" />
-          <img src="/source/picture8.jpg" alt="" />
+        <div class="scroll name27">
+          <div class="tablet1"></div>
+          <div class="tablet2"></div>
+          <div class="tablet3"></div>
+          <div class="tablet4"></div>
+          <div class="tablet5"></div>
+          <div class="tablet6"></div>
+          <div class="tablet7"></div>
+          <div class="tablet8"></div>
+          <div class="tablet9"></div>
+          <div class="tablet10"></div>
+          <div class="picture1 display-none name27"></div>
+          <div class="picture2 display-none name27"></div>
+          <div class="picture3 display-none name27"></div>
+          <div class="picture4 display-none name27"></div>
+          <div class="picture5 display-none name27"></div>
+          <div class="picture6 display-none name27"></div>
+          <div class="picture7 display-none name27"></div>
+          <div class="picture8 display-none name27"></div>
         </div>
       </div>
       <div class="name28">
