--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       We're donating $5 to the Global Fund for every purchase made with apple
       pay at Apple. Through 12/8
     </div>
-    <div class="picture">
+    <div class="picture pic1">
       <div class="name">IPhone 16 Pro</div>
       <div class="name1">Hello Apple, Intelligence</div>
       <div class="xxe">
@@ -50,20 +50,39 @@
         </div>
       </div>
     </div>
-    <div class="page3">
-      <div class="name6">
-        <img src="/ipad word.png" alt="" width="180px" height="42px" />
-        <div class="font1">Two sizes. Faster chip. Doees it all.</div>
-      </div>
-      <div class="xxa">
-        <div class="name2">
-          <p>Learn more</p>
-        </div>
-        <div class="name3">
-          <p>Buy</p>
+    <div class="nemelt1">
+      <div class="name33">Gift magic.</div>
+      <div class="name34">Make their holiday wish come true.</div>
+      <div class="name36">
+        <div class="name35">
+          <p>Shop gifts</p>
         </div>
       </div>
-      <div class="name7">Hello Apple, Intelligence</div>
+    </div>
+    <div class="com1">
+      <div class="page3">
+        <div class="name6">
+          <img src="/ipad word.png" alt="" width="180px" height="42px" />
+          <div class="font1">Two sizes. Faster chip. Doees it all.</div>
+        </div>
+        <div class="xxa">
+          <div class="name2">
+            <p>Learn more</p>
+          </div>
+          <div class="name3">
+            <p>Buy</p>
+          </div>
+        </div>
+        <div class="name7">Hello Apple, Intelligence</div>
+      </div>
+      <div class="nemelt2">
+        <div class="name37">AirPods 2</div>
+        <div class="name">Now with a Hearing Aid feature.2</div>
+        <div class="xxe">
+          <div class="name2">Learn more</div>
+          <div class="name3">Buy</div>
+        </div>
+      </div>
     </div>
     <div class="tab1">
       <div class="page4">
@@ -89,6 +108,18 @@
           <div class="name12">SERIES 10</div>
           <div class="name13">Thinstant classic.</div>
           <div class="xxe">
+            <div class="name2">Learn more</div>
+            <div class="name3">Buy</div>
+          </div>
+        </div>
+      </div>
+      <div class="page6-change">
+        <div style="gap: 16px">
+          <div style="gap: 4px">
+            <div class="name14">MacBook Air</div>
+            <div class="name15">Lean. Mean. M3 machine</div>
+          </div>
+          <div class="hhi">
             <div class="name2">Learn more</div>
             <div class="name3">Buy</div>
           </div>
@@ -138,8 +169,28 @@
         </div>
         <div class="name23">Get your estimate</div>
       </div>
+      <div class="page8-1">
+        <div>
+          <div class="name26-change">
+            <img src="/Vector.svg" alt="" />
+            <div class="name24">Card</div>
+          </div>
+          <div class="name25-change">
+            Get up to 3% Daily Cash back with every purchase.
+          </div>
+        </div>
+        <div class="hhi-change">
+          <div class="name2-change">Learn more</div>
+          <div class="name3-change">Apply now</div>
+        </div>
+      </div>
     </div>
     <div class="page10">
+      <div class="scroll name27">
+        <div class="comscroll1"></div>
+        <div class="comscroll2"></div>
+        <div class="comscroll3"></div>
+      </div>
       <div class="conteiner">
         <div class="scroll name27">
           <div class="tablet1"></div>
@@ -175,11 +226,11 @@
     </div>
     <div class="page11">
       <div class="name29">
-        <div>
+        <div class="name31 display-none">
           <img src="/lala.jpg" alt="" />
           <div class="name30">La Oficial</div>
         </div>
-        <div>
+        <div class="name32 display-none">
           <img src="/Background.png" alt="" style="height: 114px" />
           <div class="name30">Travel-Friendly Workouts</div>
         </div>
