--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
     <div class="page1">
       <img style="padding-left: 16px" src="/SVG.svg" alt="" />
+      <div class="button">
+        <div class="wow">Store</div>
+        <div class="wow">Mac</div>
+        <div class="wow">IPad</div>
+        <div class="wow">IPhone</div>
+        <div class="wow">Watch</div>
+        <div class="wow">Vision</div>
+        <div class="wow">AirPods</div>
+        <div class="wow">TV & Home</div>
+        <div class="wow">Entertainment</div>
+        <div class="wow">Accessories</div>
+        <div class="wow">Support</div>
+      </div>
       <div class="head2">
         <img src="/search.svg" alt="" />
         <img src="/bag.svg" alt="" />
@@ -186,31 +199,36 @@
       </div>
     </div>
     <div class="page10">
-      <div class="scroll name27">
-        <div class="comscroll1"></div>
-        <div class="comscroll2"></div>
-        <div class="comscroll3"></div>
-      </div>
-      <div class="conteiner">
-        <div class="scroll name27">
-          <div class="tablet1"></div>
-          <div class="tablet2"></div>
-          <div class="tablet3"></div>
-          <div class="tablet4"></div>
-          <div class="tablet5"></div>
-          <div class="tablet6"></div>
-          <div class="tablet7"></div>
-          <div class="tablet8"></div>
-          <div class="tablet9"></div>
-          <div class="tablet10"></div>
-          <div class="picture1 display-none name27"></div>
-          <div class="picture2 display-none name27"></div>
-          <div class="picture3 display-none name27"></div>
-          <div class="picture4 display-none name27"></div>
-          <div class="picture5 display-none name27"></div>
-          <div class="picture6 display-none name27"></div>
-          <div class="picture7 display-none name27"></div>
-          <div class="picture8 display-none name27"></div>
+      <div style="overflow: scroll; width: 100%">
+        <div class="name27-change">
+          <div class="comscroll1"></div>
+          <div class="comscroll2">
+            <div class="t1">Stream now</div>
+            <div class="t2">Comedy · Will they make history…or fake it?</div>
+          </div>
+          <div class="comscroll3"></div>
+        </div>
+        <div class="conteiner">
+          <div class="scroll name27">
+            <div class="tablet1"></div>
+            <div class="tablet2"></div>
+            <div class="tablet3"></div>
+            <div class="tablet4"></div>
+            <div class="tablet5"></div>
+            <div class="tablet6"></div>
+            <div class="tablet7"></div>
+            <div class="tablet8"></div>
+            <div class="tablet9"></div>
+            <div class="tablet10"></div>
+            <div class="picture1 display-none name27"></div>
+            <div class="picture2 display-none name27"></div>
+            <div class="picture3 display-none name27"></div>
+            <div class="picture4 display-none name27"></div>
+            <div class="picture5 display-none name27"></div>
+            <div class="picture6 display-none name27"></div>
+            <div class="picture7 display-none name27"></div>
+            <div class="picture8 display-none name27"></div>
+          </div>
         </div>
       </div>
       <div class="name28">
@@ -224,6 +242,7 @@
         <div class="scroll1"></div>
       </div>
     </div>
+    <!--  -->
     <div class="page11">
       <div class="name29">
         <div class="name31 display-none">
@@ -235,6 +254,13 @@
           <div class="name30">Travel-Friendly Workouts</div>
         </div>
       </div>
+    </div>
+    <div class="zuragnuud">
+      <div class="zurag1"></div>
+      <div class="zurag2"></div>
+      <div class="zurag3"></div>
+      <div class="zurag4"></div>
+      <div class="zurag5"></div>
     </div>
   </body>
 </html>
