--- a/index.html
+++ b/index.html
@@ -256,11 +256,57 @@
       </div>
     </div>
     <div class="zuragnuud">
-      <div class="zurag1"></div>
-      <div class="zurag2"></div>
-      <div class="zurag3"></div>
-      <div class="zurag4"></div>
-      <div class="zurag5"></div>
+      <div class="zurag1">
+        <div class="text1">Improve Your Posture wicth Pilates</div>
+        <img
+          src="/applefitness.png"
+          alt=""
+          style="
+            width: 78px;
+            height: 14px;
+            margin-bottom: 23px;
+            margin-right: 15px;
+          "
+        />
+      </div>
+      <div class="zurag2b">
+        <div class="zurag2"></div>
+        <div class="text">R&B Now</div>
+        <img
+          src="/applemusic.png"
+          alt=""
+          style="
+            width: 59px;
+            height: 14px;
+            padding-top: 200px;
+            padding-right: 15px;
+          "
+        />
+      </div>
+      <div class="zurag3">
+        <div class="text1">NBA 2K25 Arcade Edition</div>
+        <img
+          src="/apple arcade.png"
+          alt=""
+          style="width: 78px; height: 14px; margin-bottom: 25px"
+        />
+      </div>
+      <div class="zurag4">
+        <div class="text1">Strength with Kim</div>
+        <img
+          src="/applefitness.png"
+          alt=""
+          style="
+            width: 59px;
+            height: 14px;
+            margin-bottom: 25px;
+            margin-right: 15px;
+          "
+        />
+      </div>
+      <div class="zurag5b">
+        <div class="zurag5"></div>
+      </div>
     </div>
   </body>
 </html>
