--- a/ondex.html
+++ b/ondex.html
@@ -42,123 +42,373 @@
       Installments.
     </div>
     <div class="section1"></div>
-    <div class="section2">
-      <div style="display: flex">
-        <div class="name1">Store.</div>
-        <div class="name2">Gift magic this holiday.</div>
-      </div>
-      <div style="display: flex">
-        <div class="name3"></div>
-        <div class="name4">
-          <p class="name5">Need shopping help?</p>
-          <p class="name6">Ask a SpecialistVisit an Apple Store</p>
-          <p class="name5">Visit an Apple Store</p>
-          <p class="name6">Find one near you</p>
+    <div class="BigFrame">
+      <div class="section2">
+        <div style="display: flex">
+          <div class="name1">Store.</div>
+          <div class="name2">Gift magic this holiday.</div>
         </div>
-      </div>
-    </div>
-    <div class="section3">
-      <div class="name7">
-        <img src="/store-card-13-mac-nav-202410.png" alt="" />
-        Mac
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-iphone-nav-202409_GEO_US.png" alt="" />
-        IPhone
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-ipad-nav-202405.png" alt="" />
-        IPad
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-watch-nav-202409.png" alt="" />
-        Apple Watch
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-vision-pro-nav-202401.png" alt="" />
-        Apple Vision Pro
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-airpods-nav-202409.png" alt="" />
-        AirPods
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-airtags-nav-202108.png" alt="" />
-        AirTag
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-appletv-nav-202210.png" alt="" />
-        Apple TV 4K
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-homepod-nav-202301.png" alt="" />
-        Homepod
-      </div>
-      <div class="name7">
-        <img src="/store-card-13-accessories-nav-202409.png" alt="" />
-        Accessories
-      </div>
-      <div class="name7">
-        <img
-          src="/store-card-13-holiday-giftcards-asit-agc-nav-202111.png"
-          alt=""
-        />
-        Apple Gift Card
-      </div>
-    </div>
-    <div class="section4">
-      <div class="name8-9">
-        <div class="name8">The latest.</div>
-        <div class="name9">Let them unwrap wonders.</div>
-      </div>
-      <div class="gg1">
-        <div class="name10">
-          <div class="frame1">
-            <div class="name11">APPLE INTELLIGENCE</div>
-            <div class="name12">iPhone 16 Pro</div>
-            <div class="name13">From $999 or $41.62/mo. for 24 mo.*</div>
-          </div>
-        </div>
-        <div class="name14">
-          <div class="frame2">
-            <div class="name12">Apple Watch Series 10</div>
-            <div class="name13">From $399 or $33.25/mo. for 12 mo.</div>
-          </div>
-        </div>
-        <div class="name15">
-          <div class="frame1">
-            <div class="name11">APPLE INTELLIGENCE</div>
-            <div class="name12">iPad mini</div>
-            <div class="name13">From $499 or $41.58/mo. for 12 mo.</div>
-          </div>
-        </div>
-        <div class="name16">
-          <div class="frame1">
-            <div class="name11">APPLE INTELLIGENCE</div>
-            <div class="name12">MacBook Pro</div>
-            <div class="name13">From $1599 or $133.25/mo. for 12 mo.</div>
+        <div style="display: flex">
+          <div class="name3"></div>
+          <div class="name4">
+            <p class="name5">Need shopping help?</p>
+            <p class="name6">Ask a SpecialistVisit an Apple Store</p>
+            <p class="name5">Visit an Apple Store</p>
+            <p class="name6">Find one near you</p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="section5">
-      <div class="name8-9">
-        <div class="name8">Personalization.</div>
-        <div class="name9">Let them unwrap wonders.</div>
+      <div class="section3">
+        <div class="name7">
+          <img src="/store-card-13-mac-nav-202410.png" alt="" />
+          Mac
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-iphone-nav-202409_GEO_US.png" alt="" />
+          IPhone
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-ipad-nav-202405.png" alt="" />
+          IPad
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-watch-nav-202409.png" alt="" />
+          Apple Watch
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-vision-pro-nav-202401.png" alt="" />
+          Apple Vision Pro
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-airpods-nav-202409.png" alt="" />
+          AirPods
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-airtags-nav-202108.png" alt="" />
+          AirTag
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-appletv-nav-202210.png" alt="" />
+          Apple TV 4K
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-homepod-nav-202301.png" alt="" />
+          Homepod
+        </div>
+        <div class="name7">
+          <img src="/store-card-13-accessories-nav-202409.png" alt="" />
+          Accessories
+        </div>
+        <div class="name7">
+          <img
+            src="/store-card-13-holiday-giftcards-asit-agc-nav-202111.png"
+            alt=""
+          />
+          Apple Gift Card
+        </div>
       </div>
-      <div class="frame3">
-        <div class="name17"></div>
-        <div class="name18">
-          <img src="/zz2.jpg" alt="" width="230px" height="230px" />
+      <div class="section4">
+        <div class="name8-9">
+          <div class="name8">The latest.</div>
+          <div class="name9">Let them unwrap wonders.</div>
         </div>
-        <div class="name19">
-          <img src="zz3.jpg" alt="" />
+        <div class="gg1">
+          <div class="name10">
+            <div class="frame1">
+              <div class="name11">APPLE INTELLIGENCE</div>
+              <div class="name12">iPhone 16 Pro</div>
+              <div class="name13">From $999 or $41.62/mo. for 24 mo.*</div>
+            </div>
+          </div>
+          <div class="name14">
+            <div class="frame2">
+              <div class="name12">Apple Watch Series 10</div>
+              <div class="name13">From $399 or $33.25/mo. for 12 mo.</div>
+            </div>
+          </div>
+          <div class="name15">
+            <div class="frame1">
+              <div class="name11">APPLE INTELLIGENCE</div>
+              <div class="name12">iPad mini</div>
+              <div class="name13">From $499 or $41.58/mo. for 12 mo.</div>
+            </div>
+          </div>
+          <div class="name16">
+            <div class="frame1">
+              <div class="name11">APPLE INTELLIGENCE</div>
+              <div class="name12">MacBook Pro</div>
+              <div class="name13">From $1599 or $133.25/mo. for 12 mo.</div>
+            </div>
+          </div>
         </div>
-        <div class="name20">
-          <img src="/zz4.jpg" alt="" />
+      </div>
+      <div class="section5">
+        <div class="name8-9">
+          <div class="name8">Personalization.</div>
+          <div class="name9">Let them unwrap wonders.</div>
         </div>
-        <div class="name21">
-          <img src="/zz5.jpg" alt="" />
+        <div style="overflow: scroll">
+          <div class="frame3">
+            <div class="name17">
+              <div class="name17-text">Make their gift one of a kind.</div>
+            </div>
+            <div class="name18">
+              <img src="/zz2.jpg" alt="" width="230px" height="230px" />
+              <div class="name22">
+                <img src="/b1.jpg" alt="" width="12px" height="12px" />
+                <img src="/b2.jpg" alt="" width="12px" height="12px" />
+                <img src="/b3.jpg" alt="" width="12px" height="12px" />
+                <img src="/b4.jpg" alt="" width="12px" height="12px" />
+                <img src="/b5.jpg" alt="" width="12px" height="12px" />
+              </div>
+              <div class="name23">Free Engraving</div>
+              <div class="name24">AirPods Max - Purple</div>
+              <div class="name25">$549.00</div>
+            </div>
+            <div class="name19">
+              <img src="zz3.jpg" alt="" width="230px" height="230px" />
+              <div class="name26">Free Engraving</div>
+              <div class="name24">AirPods Pro 2</div>
+              <div class="name25">$249.00</div>
+            </div>
+            <div class="name20">
+              <img src="/zz4.jpg" alt="" width="230px" height="230px" />
+              <div class="name26">Free Engraving</div>
+              <div class="name24">AirPods 4 with Active Noise Cancellation</div>
+              <div class="name25">$179.00</div>
+            </div>
+            <div class="name21">
+              <img src="/zz5.jpg" alt="" width="230px" height="230px" />
+              <div class="name26">New</div>
+              <div class="name24">Apple Pencil Pro</div>
+              <div class="name25">$49.00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section6">
+        <div class="name8-9">
+          <div class="name8">Holiday Picks.</div>
+          <div class="name9">Add more magic to the moment.</div>
+        </div>
+        <div style="overflow: scroll">
+          <div class="frame3">
+            <div class="name27">
+              <div class="name27-text">
+                Surprise your favorites with these favorites.
+              </div>
+            </div>
+            <div class="name18">
+              <img src="/q2.jpg" alt="" width="230px" height="230px" />
+              <div class="name22">
+                <img src="/w1.jpg" alt="" width="12px" height="12px" />
+                <img src="/w2.jpg" alt="" width="12px" height="12px" />
+                <img src="/w3.jpg" alt="" width="12px" height="12px" />
+                <img src="/w4.jpg" alt="" width="12px" height="12px" />
+                <img src="/w5.jpg" alt="" width="12px" height="12px" />
+                <img src="/w6.jpg" alt="" width="12px" height="12px" />
+              </div>
+              <div class="name23">New</div>
+              <div class="name24">
+                iPhone 16 Silicone Case with MagSafe - Star Fruit
+              </div>
+              <div class="name25">$49.00</div>
+            </div>
+            <div class="name19">
+              <img src="q3.jpg" alt="" width="230px" height="230px" />
+              <div class="name22">
+                <img src="/e1.jpg" alt="" width="12px" height="12px" />
+                <img src="/e2.jpg" alt="" width="12px" height="12px" />
+                <img src="/e3.jpg" alt="" width="12px" height="12px" />
+                <img src="/e4.jpg" alt="" width="12px" height="12px" />
+                <img src="/e5.jpg" alt="" width="12px" height="12px" />
+              </div>
+              <div class="name24-a">HomePod mini - White</div>
+              <div class="name25">$99.00</div>
+            </div>
+            <div class="name20">
+              <img src="/q4.jpg" alt="" width="230px" height="230px" />
+              <div class="name22">
+                <img src="/r1.jpg" alt="" width="12px" height="12px" />
+                <img src="/r2.jpg" alt="" width="12px" height="12px" />
+                <img src="/r3.jpg" alt="" width="12px" height="12px" />
+                <img src="/r4.jpg" alt="" width="12px" height="12px" />
+              </div>
+              <div class="name24-a">
+                Smart Folio for iPad Air 11 - inch (M2) - Sage
+              </div>
+              <div class="name25">$79.00</div>
+            </div>
+            <div class="name21">
+              <img src="/q5.jpg" alt="" width="230px" height="230px" />
+              <div class="name22">
+                <img src="/t1.jpg" alt="" width="12px" height="12px" />
+                <img src="/t2.jpg" alt="" width="12px" height="12px" />
+                <img src="/t3.jpg" alt="" width="12px" height="12px" />
+              </div>
+              <div class="name26-a">New</div>
+              <div class="name24">
+                Beats Solo 4 - On-Ear Wireless Headphones - Slate Blue
+              </div>
+              <div class="name25">$79.00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section7">
+        <div class="name8-9">
+          <div class="name8">Only at Apple.</div>
+          <div class="name9">With you every step of the holiday</div>
+        </div>
+        <div style="overflow: scroll">
+          <div class="frame4">
+            <div class="name28">
+              <div class="name31">
+                Get gifts in time for the holidays with two hour delivery,² free
+                delivery,or easy pickup.
+              </div>
+            </div>
+            <div class="name29">
+              <div class="name30">
+                <div style="width: 234px">
+                  Customize your Mac and create your own style of Apple Watch.
+                </div>
+              </div>
+              <div class="name30">
+                <div style="width: 226px">
+                  Pay in full or pay over time. Your choice.
+                </div>
+              </div>
+            </div>
+            <div class="name29">
+              <div class="name30">
+                <div style="width: 234px">
+                  Free extended returns between now and 1/8/25.
+                </div>
+              </div>
+              <div class="name30">
+                <div style="width: 226px">
+                  Make them yours. Engrave a mix of emoji, names, and numbers
+                  for free.
+                </div>
+              </div>
+            </div>
+            <div class="name32">
+              <div class="name33">APPLE TRADE IN</div>
+              <div class="name35">
+                Trade in your current device. Get credit toward a new one.³
+              </div>
+            </div>
+            <div class="name34">
+              <div class="name33">APPLE SPECIALIST</div>
+              <div class="name35">
+                Find gifts with an Apple Specialist in a store or online.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section8">
+        <div class="name8-9">
+          <div class="name8">The Apple Experience.</div>
+          <div class="name9">Even more awe in store.</div>
+        </div>
+        <div style="overflow: scroll">
+          <div class="frame5">
+            <div class="name36">
+              <div class="name40">APPLE MUSIC</div>
+              <div class="name41">Get 3 months of Apple Music free.</div>
+              <div class="name42">
+                Included with the purchase of select Apple devices.
+              </div>
+            </div>
+            <div class="name37">
+              <div class="name43">APPLE TV+</div>
+              <div class="name44">
+                Get 3 months free when you buy an Apple device.
+              </div>
+            </div>
+            <div class="name38">
+              <div class="name45">
+                Six Apple services. One easy subscription.
+              </div>
+            </div>
+            <div class="name39">
+              <div class="name46">APPLE INTELLIGENCE</div>
+              <div class="name47">
+                New features for writing, focus,communication, and more.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section9">
+        <div class="name8-9">
+          <div class="name8">Special Savings.</div>
+          <div class="name9">
+            iPhone carrier deals and exclusive savings for school,
+          </div>
+        </div>
+        <div class="namaste">businesses, and more.</div>
+        <div style="overflow: scroll">
+          <div class="frame6">
+            <div class="name48">
+              <div class="name53">CARRIER DEALS</div>
+              <div class="name54">
+                Apple. Your one‑stop shop for incredible carrier deals.
+              </div>
+              <div class="name55">
+                Get up to $1000 in credit on a new iPhone with AT&T,
+                Boost Mobile, T‑Mobile, or Verizon. Trade‑in may be required.⁴
+              </div>
+            </div>
+            <div class="name49">
+              <div class="name53">EDUCATION</div>
+              <div class="name54">
+                Buy a new Mac or iPad with education savings.
+              </div>
+            </div>
+            <div class="name50">
+              <div class="name53">CERTIFIED REFURBISHED</div>
+              <div class="name54">
+                Shop refurbished Apple products backed by a one‑year warranty.
+              </div>
+            </div>
+            <div class="name51">
+              <div class="name53">BUSINESS</div>
+              <div class="name56">
+                From enterprise to small business, we’ll work with you.
+              </div>
+            </div>
+            <div class="name52">
+              <div class="name53">GOVERNMENT</div>
+              <div class="name54">
+                Special pricing is available for state, local, and federal
+                agencies.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section10">
+        <div class="name57">Quick Links</div>
+        <div class="frame7">
+          <div class="name58">
+            <div>Order Status</div>
+            <img src="/vectoooor.svg" alt="" width="8px" height="8px" />
+          </div>
+          <div class="name58">
+            <div>Shopping Help</div>
+            <img src="/vectoooor.svg" alt="" width="8px" height="8px" />
+          </div>
+          <div class="name58">
+            <div>Shopping Help</div>
+            <img src="/vectoooor.svg" alt="" width="8px" height="8px" />
+          </div>
+          <div class="name58">
+            <div>Your Saves</div>
+            <img src="/vectoooor.svg" alt="" width="8px" height="8px" />
+          </div>
         </div>
       </div>
     </div>
