--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <!-- apple (mobile phone) -->
 
     <div class="page1">
-      <img style="padding-left: 16px" src="/SVG.svg" alt="" />
+      <div class="zaswar1">
+        <img style="padding-left: 16px" src="/SVG.svg" alt="" />
+      </div>
       <div class="button">
-        <div class="wow">Store</div>
+        <a href="./ondex.html"><div class="wow">Store</div></a>
         <div class="wow">Mac</div>
         <div class="wow">IPad</div>
         <div class="wow">IPhone</div>
