--- a/ondex.html
+++ b/ondex.html
@@ -15,7 +15,9 @@
   <body style="margin: 0; background-color: #f5f5f7">
     <div style="width: 100vw; display: flex; justify-content: center">
       <div class="page1">
-        <img style="padding-left: 16px" src="/SVG.svg" alt="" />
+        <a href="./index.html"
+          ><img style="padding-left: 16px" src="/SVG.svg" alt=""
+        /></a>
         <div class="button">
           <div class="wow">Store</div>
           <div class="wow">Mac</div>
